[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Toxic_orb.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Toxic_orb/Toxic_orb.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Toxic_orb/Toxic_zone.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0606

[node name="Toxic_orb" type="Area2D" groups=["orbs"]]
script = ExtResource( 2 )
target_scale = Vector2( 3, 3 )
toxic_zone = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CleanseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Toxic_orb_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Toxic_orb_area_exited"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CleanseTimer" to="." method="_on_CleanseTimer_timeout"]
